// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`File extension - plugin > Options: directiveSyntax > should render both file markups 1`] = `
"<p><a href=\\"../file\\" download=\\"file.txt\\" class=\\"yfm-file\\"><span class=\\"yfm-file__icon\\"></span>file.txt</a></p>
<p><a class=\\"yfm-file\\" href=\\"path/to/video\\" download=\\"video.mp4\\"><span class=\\"yfm-file__icon\\"></span>video.mp4</a></p>
"
`;

exports[`File extension - plugin > Options: directiveSyntax > should render only new (directive) file markup 1`] = `
"<p>{% file src=\\"../file\\" name=\\"file.txt\\" %}</p>
<p><a class=\\"yfm-file\\" href=\\"path/to/video\\" download=\\"video.mp4\\"><span class=\\"yfm-file__icon\\"></span>video.mp4</a></p>
"
`;

exports[`File extension - plugin > Options: directiveSyntax > should render only old file markup 1`] = `
"<p><a href=\\"../file\\" download=\\"file.txt\\" class=\\"yfm-file\\"><span class=\\"yfm-file__icon\\"></span>file.txt</a></p>
<p>:file<a href=\\"path/to/video\\">video.mp4</a></p>
"
`;

exports[`File extension - plugin > dyrective syntax > should add allowed attrs 1`] = `
"<p><a class=\\"yfm-file\\" href=\\"../readme\\" download=\\"readme.md\\" referrerpolicy=\\"origin\\" rel=\\"external\\" target=\\"_blank\\" type=\\"text/plain\\" hreflang=\\"en\\"><span class=\\"yfm-file__icon\\"></span>readme.md</a></p>
"
`;

exports[`File extension - plugin > dyrective syntax > should generate file token 1`] = `
[
  Token {
    "attrs": null,
    "block": true,
    "children": null,
    "content": "",
    "hidden": false,
    "info": "",
    "level": 0,
    "map": [
      0,
      1,
    ],
    "markup": "",
    "meta": null,
    "nesting": 1,
    "tag": "p",
    "type": "paragraph_open",
  },
  Token {
    "attrs": null,
    "block": true,
    "children": [
      Token {
        "attrs": [
          [
            "class",
            "yfm-file",
          ],
          [
            "href",
            "path/to/video",
          ],
          [
            "download",
            "video.mp4",
          ],
        ],
        "block": false,
        "children": null,
        "content": "video.mp4",
        "hidden": false,
        "info": "",
        "level": 0,
        "map": null,
        "markup": ":file",
        "meta": null,
        "nesting": 0,
        "tag": "",
        "type": "yfm_file",
      },
    ],
    "content": ":file[video.mp4](path/to/video)",
    "hidden": false,
    "info": "",
    "level": 1,
    "map": [
      0,
      1,
    ],
    "markup": "",
    "meta": null,
    "nesting": 0,
    "tag": "",
    "type": "inline",
  },
  Token {
    "attrs": null,
    "block": true,
    "children": null,
    "content": "",
    "hidden": false,
    "info": "",
    "level": 0,
    "map": null,
    "markup": "",
    "meta": null,
    "nesting": -1,
    "tag": "p",
    "type": "paragraph_close",
  },
]
`;

exports[`File extension - plugin > dyrective syntax > should not add attrs not from whitelist 1`] = `
"<p><a class=\\"yfm-file\\" href=\\"a.md\\" download=\\"a.md\\"><span class=\\"yfm-file__icon\\"></span>a.md</a></p>
"
`;

exports[`File extension - plugin > dyrective syntax > should render file directive 1`] = `
"<p><a class=\\"yfm-file\\" href=\\"path/to/video\\" download=\\"video.mp4\\"><span class=\\"yfm-file__icon\\"></span>video.mp4</a></p>
"
`;

exports[`File extension - plugin > dyrective syntax > should render file inside text 1`] = `
"<p>before<a class=\\"yfm-file\\" href=\\"../../docs/readme.md\\" download=\\"file.txt\\"><span class=\\"yfm-file__icon\\"></span>file.txt</a>after</p>
"
`;

exports[`File extension - plugin > should add extra attrs 1`] = `
"<p><a href=\\"../file\\" download=\\"file.txt\\" class=\\"yfm-file\\" data-yfm-file=\\"yes\\"><span class=\\"yfm-file__icon\\"></span>file.txt</a></p>
"
`;

exports[`File extension - plugin > should add extra attrs by passing them to plugin options 1`] = `
"<p><a href=\\"../file\\" download=\\"file.txt\\" class=\\"yfm-file\\" data-yfm=\\"1\\" data-file=\\"2\\"><span class=\\"yfm-file__icon\\"></span>file.txt</a></p>
"
`;

exports[`File extension - plugin > should allow quoutes in attribute value 1`] = `
"<p><a href=\\"ind'ex.txt\\" download=\\"ind&quot;ex.html\\" class=\\"yfm-file\\"><span class=\\"yfm-file__icon\\"></span>ind\\"ex.html</a></p>
"
`;

exports[`File extension - plugin > should generate yfm-file token 1`] = `
[
  Token {
    "attrs": null,
    "block": true,
    "children": null,
    "content": "",
    "hidden": false,
    "info": "",
    "level": 0,
    "map": [
      0,
      1,
    ],
    "markup": "",
    "meta": null,
    "nesting": 1,
    "tag": "p",
    "type": "paragraph_open",
  },
  Token {
    "attrs": null,
    "block": true,
    "children": [
      Token {
        "attrs": [
          [
            "href",
            "../file",
          ],
          [
            "download",
            "file.txt",
          ],
          [
            "class",
            "yfm-file",
          ],
        ],
        "block": false,
        "children": null,
        "content": "file.txt",
        "hidden": false,
        "info": "",
        "level": 0,
        "map": null,
        "markup": "{% file ",
        "meta": null,
        "nesting": 0,
        "tag": "",
        "type": "yfm_file",
      },
    ],
    "content": "{% file src=\\"../file\\" name=\\"file.txt\\" %}",
    "hidden": false,
    "info": "",
    "level": 1,
    "map": [
      0,
      1,
    ],
    "markup": "",
    "meta": null,
    "nesting": 0,
    "tag": "",
    "type": "inline",
  },
  Token {
    "attrs": null,
    "block": true,
    "children": null,
    "content": "",
    "hidden": false,
    "info": "",
    "level": 0,
    "map": null,
    "markup": "",
    "meta": null,
    "nesting": -1,
    "tag": "p",
    "type": "paragraph_close",
  },
]
`;

exports[`File extension - plugin > should ignore additional file markup 1`] = `
"<p>{% file <a href=\\"index.txt\\" download=\\"index.html\\" class=\\"yfm-file\\"><span class=\\"yfm-file__icon\\"></span>index.html</a> %}</p>
"
`;

exports[`File extension - plugin > should ignore additional special characters 1`] = `
"<p>{% <a href=\\"index.txt\\" download=\\"index.html\\" class=\\"yfm-file\\"><span class=\\"yfm-file__icon\\"></span>index.html</a> %}</p>
"
`;

exports[`File extension - plugin > should ignore unknown attrs 1`] = `
"<p><a href=\\"../file\\" download=\\"file.txt\\" class=\\"yfm-file\\"><span class=\\"yfm-file__icon\\"></span>file.txt</a></p>
"
`;

exports[`File extension - plugin > should map all specific file attrs to link html attrs 1`] = `
"<p><a href=\\"../file2\\" download=\\"file2.txt\\" hreflang=\\"en\\" class=\\"yfm-file\\"><span class=\\"yfm-file__icon\\"></span>file2.txt</a></p>
"
`;

exports[`File extension - plugin > should parse attrs with single quotes 1`] = `
"<p><a href=\\"index.txt\\" download=\\"index.html\\" class=\\"yfm-file\\"><span class=\\"yfm-file__icon\\"></span>index.html</a></p>
"
`;

exports[`File extension - plugin > should pass allowed link html attrs 1`] = `
"<p><a href=\\"../file1\\" download=\\"file1.txt\\" referrerpolicy=\\"origin\\" rel=\\"help\\" target=\\"_top\\" type=\\"text/css\\" class=\\"yfm-file\\"><span class=\\"yfm-file__icon\\"></span>file1.txt</a></p>
"
`;

exports[`File extension - plugin > should render file 1`] = `
"<p><a href=\\"../file\\" download=\\"file.txt\\" class=\\"yfm-file\\"><span class=\\"yfm-file__icon\\"></span>file.txt</a></p>
"
`;

exports[`File extension - plugin > should render file between text 1`] = `
"<p>text1 <a href=\\"../file\\" download=\\"file.txt\\" class=\\"yfm-file\\"><span class=\\"yfm-file__icon\\"></span>file.txt</a> 2text</p>
"
`;

exports[`File extension - plugin > should render file with different order of attrs 1`] = `
"<p><a type=\\"text/html\\" download=\\"page.html\\" href=\\"../index.html\\" class=\\"yfm-file\\"><span class=\\"yfm-file__icon\\"></span>page.html</a></p>
"
`;

exports[`File extension - plugin > should render file with extra spaces around attrs 1`] = `
"<p><a href=\\"index.txt\\" download=\\"index.html\\" type=\\"text/html\\" class=\\"yfm-file\\"><span class=\\"yfm-file__icon\\"></span>index.html</a></p>
"
`;

exports[`File extension - plugin > should render file with text after 1`] = `
"<p><a href=\\"../file\\" download=\\"file.txt\\" class=\\"yfm-file\\"><span class=\\"yfm-file__icon\\"></span>file.txt</a> don't download it</p>
"
`;

exports[`File extension - plugin > should render file with text before 1`] = `
"<p>download it <a href=\\"../file\\" download=\\"file.txt\\" class=\\"yfm-file\\"><span class=\\"yfm-file__icon\\"></span>file.txt</a></p>
"
`;

exports[`File extension - plugin > should render with file markup in attributes 1`] = `
"<p><a href=\\"in%}dex.txt\\" download=\\"{% file src='a' name='b' %}\\" class=\\"yfm-file\\"><span class=\\"yfm-file__icon\\"></span>{% file src='a' name='b' %}</a></p>
"
`;
